--- a/main.css
+++ b/main.css
@@ -4,6 +4,9 @@ body
    	width:100%;
 	background-image:url("https://gkzhp-my.sharepoint.com/personal/marek_musialik_zhp_net_pl/_layouts/15/guestaccess.aspx?docid=1272ca970bdc94ac0b953c7a6a6654606&authkey=ASkYQ279VXonRF_N_sBo8OU");
 	background-repeat: no-repeat;
+	-webkit-background-size: cover;
+ 	-moz-background-size: cover;
+ 	-o-background-size: cover;
  	background-size: cover;
 	background-color: #cccccc;
 	color: ffffff;
