--- a/main.css
+++ b/main.css
@@ -3,11 +3,10 @@ body
 	height:100%;
    	width:100%;
 	background-image:url("https://gkzhp-my.sharepoint.com/personal/marek_musialik_zhp_net_pl/_layouts/15/guestaccess.aspx?docid=12dbcc0ae05a746668b048ce2bf8a3df7&authkey=AdIPslNI_y9udB-1-fAIekg");
-	background-repeat: no-repeat;
-	-webkit-background-size: cover;
- 	-moz-background-size: cover;
- 	-o-background-size: cover;
- 	background-size: cover;
+background-repeat: no-repeat;
+background-position: center center;
+background-attachment: fixed;
+background-size: cover;
 	background-color: #cccccc;
 	color: ffffff;
 }
